# G4NumpyAnalysis

./: .gitignore  CMakeLists.txt  LICENSE  NumpyAnalysisManager.cc  NumpyAnalysisManager.hh  README.md  cnpy_example1.cpp  g4cnpy.cpp  g4cnpy.h  test.cc  test.hash  test_cont_save.cc
.github/workflows/: main.yml
cmake/: FindZipLib.cmake  G4NumpyAnalysis-config-version.cmake.in  G4NumpyAnalysis-config.cmake.in
